--- a/vignettes/spathial.Rmd
+++ b/vignettes/spathial.Rmd
@@ -11,20 +11,20 @@ vignette: >
 ```{r echo=FALSE}
 knitr::opts_chunk$set(fig.width=7, fig.height=5) 
 ```
-__The _spathial_ package is generic tool for manifold analysis. It allows to infer a relevant transition or evolutionary path which can highlights the features involved in a specific process. _spathial_ can be useful in all the scenarios where the temporal evolution is the main problem (e.g. thumor progression).__   
+The _spathial_ package is a generic tool for manifold analysis. It allows to infer a relevant transition or evolutionary path which can highlights the features involved in a specific process. _spathial_ can be useful in all the scenarios where the temporal evolution is the main problem (e.g. tumor progression).  
 
-__The _spathial_ package implements the principal path algorithm [1] and allows to navigate a n-dimensional space. The input of the algorithm are two points, which represent the boundary condition of the algorithm: the start and the end points. Given the boundaries, the algorithm learns a smooth transition path connecting them. Along the path there are new intermediate data samples which gradually morphs from the start point to the end point.__
-__In this way it is possible to move from two known states and analize which features are involved in the transition from the two states.__
-__The workflow for constructing the path is composed of few steps. Firstly, it is necessary to choose the start and the end points. _spathial_ provides three different alternatives to do that (which will be discussed later), but the user can additionally choose their own strategy. The second step consist in prefiltering the data. This step is non strictly necessary to construct the path, but allows to obtain a local solution removing some of the data points. In this way, the solution is based on a restricted number of samples. Finally, it is possible to compute the principal path algorithm.__ 
+The _spathial_ package implements the principal path algorithm [1] and allows to navigate a n-dimensional space. The input of the algorithm are two points, which represent the boundary condition of the algorithm: the start and the end points. Given the boundaries, the algorithm learns a smooth transition path connecting them. Along the path there are new intermediate data samples which gradually morphs from the start point to the end point.
+In this way it is possible to move from two known states and analize which features are involved in the transition from the two states.
+The workflow for constructing the path is composed of few steps. Firstly, it is necessary to choose the start and the end points. _spathial_ provides three different alternatives to do that (which will be discussed later), but the user can additionally choose their own strategy. The second step consist in prefiltering the data. This step is non strictly necessary to construct the path, but allows to obtain a local solution removing some of the data points. In this way, the solution is based on a restricted number of samples. Finally, it is possible to compute the principal path algorithm. 
 
-__spathial_ additionally provides functions to analize the path. In particular it allows to plot data in 2d using the t-SNE algorithm [2] for dimensionality reduction, to learn the labels corresponding to each path's intermediate points using the kNN algorithm [3] and to compute the statistics (Pearson's correlation and rank). The latter allows to find the features involved in the transition process from the start point to the end point.__
+_spathial_ additionally provides functions to analize the path. In particular it allows to plot data in 2d using the t-SNE algorithm [2] for dimensionality reduction, to learn the labels corresponding to each path's intermediate points using the kNN algorithm [3] and to compute the statistics (Pearson's correlation and rank). The latter allows to find the features involved in the transition process from the start point to the end point.
 
-__The next sections describes how to use _spathial_ and provides some examples.__
+The next sections describes how to use _spathial_ and provides some examples.
 
 # Quick start
 In this section the most basic steps to run the _spathial_ implementation of the principal path algorithm [1] are shown, through a simple 2d example.
 
-The very first step is the spathial package installation
+The very first step is the _spathial_ package installation
 ```{r eval=FALSE}
 install.packages("spathial")
 ```
@@ -86,7 +86,7 @@ legend("topright", inset=c(-0.25,0), legend=legend_names, col=legend_color, pch=
 
 ## Step 1: select the boundaries
 The first step to compute the principal path consists in selecting the starting and the ending points. 
-The package spathial has the function ```spathialBoundaryIds``` which takes as input the matrix ```X```, 
+The package _spathial_ has the function ```spathialBoundaryIds``` which takes as input the matrix ```X```, 
 the corresponding labels ```X_labels``` (or NULL) and the parameters ```mode```, ```from``` and ```to```.
 
 The parameter ```mode``` can assume of one the following values:
@@ -104,7 +104,7 @@ The output of the function ```spathialBoundaryIds``` is a list with the followin
 
 __N.B.__ The matrix ```X``` and the vector ```X_labels``` change only when ```mode=2``` (the resulting matrix and vector have two additional elements, corresponding to the centroids).
 
-__User can choose the start and the end point with their own strategy, which can be more suitable for their specific problem; in this case, the user should run the function ```spathialBoundaryIds``` with ```mode=3``` specifing the rownames of the samples using the parameters ```from``` and ```to```.__
+User can choose the start and the end point with their own strategy, which can be more suitable for their specific problem; in this case, the user should run the function ```spathialBoundaryIds``` with ```mode=3``` specifing the rownames of the samples using the parameters ```from``` and ```to```.
 
 The following code chunks show how to use the function ```spathialBoundaryIds```, with different values of the parameter ```mode```, and how to extract the output:
 
@@ -117,7 +117,6 @@ boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=1)
 boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=2, from="c3", to="c6")
 ```
 
-```
 ``` {r eval=FALSE}
 # mode=3 (From named sample to another named sample)
 boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=3,
@@ -231,14 +230,14 @@ The following code shows how to use the function ```spathialPlot``` with the pat
 # Plot principal path with prefiltering - provide a mask
 spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res_with_filtering,
                        perplexity_value=30, mask=mask,
-                       main="Principal path with prefiltering"
+                       title="Principal path with prefiltering"
 )
 ```
 ```{r, cap='_Output of the spathialPlot() function. Filtered samples are marked in grey._'}
 # Plot principal path without prefiltering - mask NULL
 spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res_without_filtering,
                        perplexity_value=30,                       
-                       main="Principal path without prefiltering"
+                       title="Principal path without prefiltering"
 )
 ```
 
@@ -413,7 +412,7 @@ startPoint <- getMaxDistancePoint(tumor_centroid, normal)
 endPoint <- getMaxDistancePoint(normal_centroid, tumor)
 ```
 
-Now, one can use the spathial method ```spathialBoundaryIds``` with ```mode=3``` in order to initialize the boudaries as shown below:
+Now, one can use the _spathial_ method ```spathialBoundaryIds``` with ```mode=3``` in order to initialize the boudaries as shown below:
 ```{r}
 boundaries <- spathial::spathialBoundaryIds(X, X_labels, mode=3, from=startPoint, to=endPoint)
 boundary_ids<-boundaries$boundary_ids
@@ -431,161 +430,40 @@ save(spathial_res, "spathial_res.rda")
 
 Each waypoint is a new gene profile which is sligthly different from the previous one and all of them are topologically connected via a chain of springs.
 
-The ```spathial``` method ```spathialPlot``` can be used to visualize the path.
+The _spathial_ method ```spathialPlot``` can be used to visualize the path.
 ```{r}
 my_res<-system.file("extdata", "spathial_res.rda", package = "spathial")
 load(my_res)
 spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value = 30, mask = NULL)
 ```
-Since in this example we have a n-dimensional space (with n = 19637), a dimensionality reduction strategy is necessary to plot the principal path algorithm. ```spathial``` uses the t-SNE algorithm [2]. 
+Since in this example we have a n-dimensional space (with n = 19637), a dimensionality reduction strategy is necessary to plot the principal path algorithm. _spathial_ uses the t-SNE algorithm [2]. 
 
-The ```spathial``` method ```spathialStatistics``` can be used to calculate the Pearson's correlation coefficients and rank the genes according to the correlation scores: 
+The _spathial_ method ```spathialStatistics``` can be used to calculate the Pearson's correlation coefficients and rank the genes according to the correlation scores: 
 ```{r}
 spathial_statistics <- spathial::spathialStatistics(spathial_res)
 ```
 
 In this way it is possible to find the genes involved in the transition from "Normal" to "Tumor".
 
-### Compare _spathial_ with _edgeR_
-
-In this section, some scripts are provided in order to compare the results obtained with _spathial_ with one commonly used tools for DGEA: _edgeR_.
-
-#### Computing edgeR
-_edgeR_ is a package for differential expression analysis of digital gene expression data [4][5]. It implements a range of statistical methodology based on the negative binomial distributions, including empirical Bayes estimation, exact tests, generalized linear models and quasi-likelihood tests. As well as RNA-seq, it be applied to differential signal analysis of other types of genomic data that produce counts, including ChIP-seq, Bisulfite-seq, SAGE and CAGE.
-
-The following script shows how to use edgeR and extract the resulting statistics:
-```
-library(edgeR)
-
-rawcounts <- t(X)
-
-group<-as.factor(X_labels)
-group<-relevel(group,ref="normal")
-edger<-DGEList(rawcounts,group=group,genes=rownames(rawcounts))
-design<-model.matrix(~0+group)
-colnames(design)<-levels(group)
-keep <- filterByExpr(edger, design) # Filtering to remove low counts
-table(keep)
-edger<-edger[keep,,keep.lib.sizes=FALSE]
-edger<-calcNormFactors(edger) # Normalization for composition bias
-edger<-estimateDisp(edger,design,robust=TRUE) # Dispersion estimation
-fit<-glmQLFit(edger,design,robust=TRUE) # Quasi-Likelihood dispersion estimate
-contrast<-makeContrasts(tumor-normal,levels=design)
-res<-glmQLFTest(fit,contrast=contrast)
-res<-res$table
-res$padj<-p.adjust(res$PValue,method="BH")
-colnames(res)<-c("logFC","logCPM","F","pvalue","padj")
-edger<-res
-save(edger, file="edger_res.rda")
-```
-
-In the following code chunk the genes from the ```spathial``` experiment are ranked according to the Pearson's correlation score (from 1 to -1) and the genes from the ```edgeR``` experiment are ranked according to the false discovery rate (FDR) calculated using the Bejamini-Hochberg (BH) method in DESeq2 (from the highest value to the lowest value):  
-```{r}
-###Sorting according to correlation values (from 1 to -1)
-spathial_cor<-sort(setNames(spathial_statistics$correlations,colnames(spathial_res)),dec=TRUE)
-
-###Loading edgeR results
-load(system.file("extdata", "edger_res.rda", package = "spathial"))
-edger_fdr <- sort(setNames(-log10(edger$padj)*sign(edger$logFC),rownames(edger)), dec=TRUE)
-```
-Finally, one compare the two results. In particular, a list of known tumor suppressor genes (tsg) and oncogenes is loaded (respectively 242 and 240 genes). Then, the subset of genes which are in common between the _spathial_ result and the _edgeR_ result are selected (16865 genes) and the genes (previously sorted) which are not highly positively and negatively correlated with the path are removed. Among the remaining genes, the genes which are not in the tsg or the oncogenes lists are removed. Finally, the genes highlighted by _spathial_ better than _edgeR_ are selected (30 genes positively correlated and 30 genes negatively correlated). 
-
-The scripts also plot the result. For a better visual representation, the function "plotComparison" shows the rank (which is from 1 to 16865) of the genes. On the y-axis users can find the rank of the genes produced by _spathial_. In particular, at the beginning and the end of the rank users can find respectively the genes which are highly negatively correlated (tumor suppressor genes) and highly positively correlated. On the x-axis users can find the rank of the genes produced by _edgeR_. In particular, on the left we can find genes with low FDR and on the righ we can find genes with high FDR.  
-
-```{r}
-###Loading Cancer Gene Census
-load(system.file("extdata", "cgc_genelists.rda", package = "spathial"))
-# Remove genes that are both TSG and oncogenes
-tmp<-setdiff(oncogenes,tsg)
-tsg<-setdiff(tsg,oncogenes)
-oncogenes<-tmp
-rm(tmp)
-
-###Utility functions
-compareTool <- function(oncogenes, tsg, edger_fdr, spathial_cor){
-  ### Make them comparable
-  common<-intersect(names(spathial_cor),names(edger_fdr))
-  x<-edger_fdr[common]
-  y<-spathial_cor[common]
-  xrank<-rank(x,ties.method="random")
-  yrank<-rank(y,ties.method="random")
-  revxrank<-rank(-x,ties.method="random")
-  revyrank<-rank(-y,ties.method="random")
-
-  ### Most different genes Path vs. DE
-  ponc<-intersect(names(y[y>quantile(y,p=0.7)]),oncogenes)
-  ptsg<-intersect(names(y[y<quantile(y,p=0.3)]),tsg)
-  ratio<-xrank[ponc]^2-yrank[ponc]^2
-  ponc<-names(sort(ratio))[1:30]
-  ratio<-revxrank[ptsg]^2-revyrank[ptsg]^2
-  ptsg<-names(sort(ratio))[1:30]
-
-  plotComparison(x, y, ptsg, ponc, xrank, yrank)
-}
-
-plotComparison <- function(x, y, ptsg, ponc, xrank, yrank){
-  if(!is.na(ptsg) && !is.na(ponc)){
-    set.seed(1)
-    plot(xrank,yrank,col="lightgrey",
-         xlim=c(-2000,20000),
-         ylim=c(-2000,20000),
-         xlab="edgeR Rank",pch=20,
-         ylab="Path Rank"
-    )
-    points(xrank[ponc],yrank[ponc],col="#FF000033",pch=20)
-    points(xrank[ptsg],yrank[ptsg],col="#0000FF33",pch=20)
-    textplot3(xrank[ponc],yrank[ponc],words=ponc,col="red3",font=2,cex=1.1,line.col="#FF000033",line.width=2)
-    textplot3(xrank[ptsg],yrank[ptsg],words=ptsg,col="navy",font=2,cex=1.1,line.col="#0000FF33",line.width=2)
-    abline(h=yrank[which.min(abs(y))])
-    abline(v=xrank[which.min(abs(x))])
-    legend("bottomright",legend=c("Oncogene","TSG"),text.col=c("red3","navy"),text.font=2,cex=1.3)
-  }else{
-    message("No common values found")
-  }
-}
-
-textplot3<-function(x, y, words, cex = 1, pch = 16, pointcolor = "#FFFFFF00",line.width=1,
-                    new = FALSE, show.lines = TRUE, line.col="black",rstep=0.5,...)
-{
-  if (new) {
-    plot(x, y, type = "n", ...)
-  }
-  lay <- wordcloud::wordlayout(x, y, words, cex, rstep=rstep, ...)
-  if (show.lines) {
-    for (i in seq_len(length(x))) {
-      xl <- lay[i, 1]
-      yl <- lay[i, 2]
-      w <- lay[i, 3]
-      h <- lay[i, 4]
-      if (x[i] < xl || x[i] > xl + w || y[i] < yl || y[i] >
-          yl + h) {
-        points(x[i], y[i], pch = pch, col = pointcolor,
-               cex = 0.5)
-        nx <- xl + 0.5 * w
-        ny <- yl + 0.5 * h
-        lines(c(x[i], nx), c(y[i], ny), col = line.col,lwd=line.width)
-      }
-    }
-  }
-  text(lay[, 1] + 0.5 * lay[, 3], lay[, 2] + 0.5 * lay[, 4],
-       words, cex = cex, ...)
-}
-
-###Compare
-compareTool(oncogenes, tsg, edger_fdr, spathial_cor)
-```
-
 # An example with Single-cell RNA-Seq data
 
-In this section it is shown a real case study on the Karlsson Single-cell RNA-Seq dataset. In this case the input matrix ```X``` is composed by 23928 features (gene expression profiles, TPMS-normalized??? ) and 96 samples. Each column of our matrix ```X``` represents a feature and each row is the gene expression profile of a specific cell. The vector ```X_labels``` contains the annotations of the cell ("G1", "S" or "G2/M") which describes the phase of the cell cycle.
-We provide an ```.rda``` file with both the ```X``` and ```X_labels```. You can simply load it by computing the following command.
+In this section it is shown a real case study on the Karlsson Single-cell RNA-Seq dataset. In this case the input matrix ```X``` is composed by 23928 features (genes) and 96 samples. Each column of our matrix ```X``` represents a feature and each row is the gene expression profile of a specific cell. The vector ```X_labels``` contains the annotations of the cell ("G1", "S" or "G2/M") which describes the phase of the cell cycle.
+We provide an ```.rda``` file with both the ```X``` and ```X_labels```. You can simply load it by computing the following commands.
 
 ```{r}
-expmat<-system.file("extdata", "karlsson-tpms.rda", package = "spathial")
-load(expmat)
-meta_data<-system.file("extdata", "karlsson-rawcounts.rda", package = "spathial")
-load(meta_data)
-X <- t(tpms)
+data <- system.file("extdata", "karlsson-rawcounts.rda", package = "spathial")
+load(data)
+
+#NORMALIZATION AND PREFILTERING OF THE DATA (GENES IN AT LEAST 3 CELLS)
+#library(Seurat)
+#seuset<-CreateSeuratObject(counts=rawcounts,min.cells=3,min.features=200)
+#normalized_seuset<-NormalizeData(seuset,normalization.method="LogNormalize",scale.factor=10000)
+#normalized_expmat <- as.matrix(normalized_seuset[["RNA"]]@data)
+#save(normalized_expmat,annotation,file="karlsson-normalized_expmat.rda")
+normalized_expmat<-system.file("extdata", "karlsson-normalized_expmat.rda", package = "spathial")
+load(normalized_expmat)
+
+X <- t(normalized_expmat)
 X_labels <- annotation
 ```
 
@@ -593,7 +471,7 @@ The aim of the example is to navigate the space from the "G1" phase to the "G2/M
 
 In this case, the start point is the centroid of the "G1" cells and the end point is the centroid of the "G2" cells. 
 
-This is an existing ```spathialBoundaries``` mode, therefore can use the function ```spathialBoundaries``` with ```mode=2``` and setting ```from``` and ```to``` respectively equal to "G1" and "G2".
+This is an existing ```spathialBoundaries``` mode, therefore the function ```spathialBoundaries``` can be used with ```mode=2``` and the parameters ```from``` and ```to``` respectively equal to "G1" and "G2".
 
 The following code block shows how to find set the boundaries:
 ```{r}
@@ -604,81 +482,28 @@ X_labels <- boundaries$X_labels
 ```
 
 In this case the prefiltering won't be executed since one is searching for a global solution. 
-The next step consists in computing the principal path algorithm using the ```spathial``` method ```spathialWay```. A path with 50 intermediate points (waypoints) can be obtained with ```NC=50```. 
+The next step consists in computing the principal path algorithm using the _spathial_ method ```spathialWay```. A path with 50 intermediate points (waypoints) can be obtained with ```NC=50```. 
 
-```{r}
+```{r results='hide'}
 spathial_res <- spathial::spathialWay(X, boundary_ids, NC = 50)
+spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value = 30, mask = NULL)
 ```
 
 Each waypoint is a new cell which is sligthly different from the previous one and all of them are topologically connected via a chain of springs.
 
-The ```spathial``` method ```spathialPlot``` can be used to visualize the path.
+Finally, one can use the _spathial_ method to plot the path as follow:
 ```{r}
 spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value = 30, mask = NULL)
 ```
-Since in this example we have a n-dimensional space (with n = 23928), a dimensionality reduction strategy is necessary to plot the principal path algorithm. ```spathial``` uses the t-SNE algorithm [2]. 
 
-The ```spathial``` method ```spathialStatistics``` can be used to calculate the Pearson's correlation coefficients and rank the genes according to the correlation scores: 
+Since in this example we have a n-dimensional space (with n = 23928), a dimensionality reduction strategy is necessary to plot the principal path algorithm. _spathial_ uses the t-SNE algorithm [2]. 
+
+The _spathial_ method ```spathialStatistics``` can be used to calculate the Pearson's correlation coefficients and rank the genes according to the correlation scores: 
 ```{r}
 spathial_statistics <- spathial::spathialStatistics(spathial_res)
 ```
 
 In this way it is possible to find the genes involved in the transition from "G1" to "G2/M".
-
-### Compare _spathial_ with _Monocle3_
-
-In this section, some scripts are provided in order to compare the results obtained with _spathial_ with one commonly used tools for Single-cell transcriptome sequencing (sc-RNA-seq) experiments.
-
-#### Computing _Monocle3_
-
-_Monocle3_ is a package for discovering new cell types and understanding how they arise in development in Single-cell transcriptome sequencing (sc-RNA-seq) experiments [CITA].
-
-It allows to perform three main types of analysis:
-
-- clustering, classifying, and counting cells: Single-cell RNA-Seq experiments allow you to discover new (and possibly rare) subtypes of cells. _Monocle3_ helps you identify them;
-- constructing single-cell trajectories: in development, disease, and throughout life, cells transition from one state to another. _Monocle3_ helps you discover these transitions;
-- differential expression analysis: characterizing new cell types and states begins with comparisons to other, better understood cells. _Monocle3_ includes a sophisticated, but easy-to-use system for differential expression.
-
-The following script shows how to use _Monocle3_ and extract the resulting statistics:
-```
-library(Monocle3)
-cell_annotation <- as.matrix(annotation)
-rownames(cell_annotation) <- colnames(tpms)
-colnames(cell_annotation) <- "cycle"
-
-gene_annotation <- as.matrix(rownames(tpms))
-rownames(gene_annotation) <- rownames(tpms)
-colnames(gene_annotation) <- "gene_short_name"
-
-cds <- new_cell_data_set(tpms,
-                         cell_metadata = cell_annotation,
-                         gene_metadata = gene_annotation)
-cds <- preprocess_cds(cds, num_dim = 100)
-cds <- reduce_dimension(cds, preprocess_method = "PCA")
-cds <- cluster_cells(cds)
-cds <- learn_graph(cds)
-
-ciliated_cds_pr_test_res <- graph_test(cds, neighbor_graph="principal_graph", cores=4)
-save(ciliated_cds_pr_test_res, file="monocle_res.rda")
-```
-
-In the following code chunk the genes from the ```spathial``` experiment with Pearson's correlation score higher than 0.7 and lowest than -0.7 are selected. Then, the genes from the ```Monocle3``` experiment with q-value < 0.05 are selected:  
-```{r}
-spathial_best_genes <- names(spathial_statistics$correlations[which(spathial_statistics$correlations > 0.7 | spathial_statistics$correlations < -0.7)])
-
-load(system.file("extdata", "monocle_res.rda", package = "spathial"))
-monocle_best_genes <- row.names(subset(ciliated_cds_pr_test_res, q_value < 0.05))
-```
-Finally, one compare the two results. In particular, two list of genes are loaded. "Group 2" describes genes whose expression progressively decreased from peak levels in early G1 to low levels in late G2/M and "Group 3" describes genes which gradually increase in expression from G1 toward mitosis. These list are selected from the Karlsson et Al. experiment, which was performed on the data used in this example [CITA].
-With a simple difference, it is possible to find genes belonging to "Group 2" and "Group 3" which are found only by _spathial_.
-
-```{r}
-###Loading Cancer Gene Census
-load(system.file("extdata", "karlsson-genes.rda", package = "spathial"))
-difference <- setdiff(spathial_best_genes, monocle_best_genes)
-difference[which(difference %in% group_2)]
-difference[which(difference %in% group_2)]
-```
 
 # References
 
@@ -687,7 +512,3 @@ difference[which(difference %in% group_2)]
 [2] L. van der Maaten and G. Hinton, “Viualizing data using t-SNE,” Journal of Machine Learning Research, vol. 9, pp. 2579–2605, Nov. 2008.
 
 [3] T. Cover and P. Hart, “Nearest neighbor pattern classification,” IEEE Transactions on Information Theory, vol. 13, pp. 21–27, Jan. 1967.
-
-[4] Robinson MD, McCarthy DJ, Smyth GK (2010). “edgeR: a Bioconductor package for differential expression analysis of digital gene expression data.” Bioinformatics, 26(1), 139-140. doi: 10.1093/bioinformatics/btp616.
-
-[5] McCarthy DJ, Chen Y, Smyth GK (2012). “Differential expression analysis of multifactor RNA-Seq experiments with respect to biological variation.” Nucleic Acids Research, 40(10), 4288-4297. doi: 10.1093/nar/gks042.
